fix aouth and add new apis for transaction